--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.presenter.CarSearchPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.presenter.car.CarSearchPresenter xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true">
@@ -151,4 +151,4 @@
 
     </android.support.v7.widget.Toolbar>
 
-</com.expedia.bookings.presenter.CarSearchPresenter>
+</com.expedia.bookings.presenter.car.CarSearchPresenter>
