s/4798 animate account lib

--- a/project/src/main/res/layout/account_v2_button.xml
+++ b/project/src/main/res/layout/account_v2_button.xml
@@ -62,6 +62,7 @@
         android:id="@+id/account_login_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
         android:gravity="center"
         android:paddingTop="@dimen/account_button_padding"
         android:orientation="vertical"
