4762. AB Test: Opt-in/out checkbox for MER email on Guest HCKO
Adding option for users to opt into Exp MER email.

--- a/project/src/main/res/layout/section_hotel_edit_traveler_pt1.xml
+++ b/project/src/main/res/layout/section_hotel_edit_traveler_pt1.xml
@@ -52,6 +52,6 @@
         android:layout_marginRight="8dp"
         android:text="@string/email_disclaimer"
         android:textColor="@color/data_review_grey"
-        android:textSize="12sp" />
+        android:textSize="@dimen/hotel_traveler_edit_email_disclaimer_text_size" />
 
 </com.expedia.bookings.section.SectionTravelerInfo>
