--- a/project/src/main/res/layout/section_phone_launch_lob.xml
+++ b/project/src/main/res/layout/section_phone_launch_lob.xml
@@ -69,7 +69,7 @@
                 android:layout_weight="1"
                 android:layout_marginRight="@dimen/launch_lob_margin"
                 app:btn_bg="@drawable/bg_lob_activities"
-                app:btn_icon="@drawable/ic_launch_activities"
+                app:btn_icon="@drawable/lob_activities"
                 app:btn_text="@string/nav_lx" />
         </LinearLayout>
     </FrameLayout>
