--- a/project/src/samsung/res/layout/widget_collection_launch.xml
+++ b/project/src/samsung/res/layout/widget_collection_launch.xml
@@ -11,6 +11,7 @@
     android:visibility="gone">
 
     <TextView
+        android:id="@+id/collection_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
