--- a/project/src/main/res/layout/account_lib_activity.xml
+++ b/project/src/main/res/layout/account_lib_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,10 +26,10 @@
             android:id="@+id/login_extension_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="30dp"
-            android:layout_gravity="center"
             android:gravity="center"
             android:orientation="vertical"
             android:visibility="gone" />
@@ -42,6 +43,44 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/facebook_email_denied_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/user_denied_permission_email_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="0"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            app:textStyle="light" />
+
+        <Button
+            android:id="@+id/try_facebook_again"
+            style="@style/LoginFormButton"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/btn_facebook_signin"
+            android:gravity="center"
+            android:text="@string/authorize_email_facebook_button" />
+
+        <Button
+            android:id="@+id/try_facebook_again_cancel"
+            style="@style/LoginFormButton"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/btn_cancel"
+            android:gravity="center"
+            android:text="@string/cancel" />
     </LinearLayout>
 
     <LinearLayout
