s/4772 Changing 9 patch images to card view.

--- a/project/src/lastMinute/res/layout/lm_section_phone_launch_lob.xml
+++ b/project/src/lastMinute/res/layout/lm_section_phone_launch_lob.xml
@@ -41,8 +41,8 @@
                 android:id="@+id/hotels_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/launch_lob_margin"
-                android:layout_marginRight="@dimen/launch_lob_margin"
+                android:layout_marginLeft="@dimen/launch_tile_margin_side"
+                android:layout_marginRight="@dimen/launch_tile_margin_middle"
                 android:layout_weight="1"
                 app:btn_bg="@drawable/bg_lob"
                 app:btn_icon="@drawable/lob_hotel"
@@ -52,7 +52,7 @@
                 android:id="@+id/flights_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/launch_lob_margin"
+                android:layout_marginRight="@dimen/launch_tile_margin_side"
                 android:layout_weight="1"
                 app:btn_bg="@drawable/bg_lob"
                 app:btn_icon="@drawable/lob_flight"
