--- a/project/src/main/res/layout/launch_tile_loading_widget.xml
+++ b/project/src/main/res/layout/launch_tile_loading_widget.xml
@@ -7,7 +7,8 @@
     android:layout_height="160dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="1dp"
-    app:cardPreventCornerOverlap="false" >
+    app:cardPreventCornerOverlap="false"
+    app:cardUseCompatPadding="true">
 
     <View
         android:id="@+id/background_image_view"
