--- a/project/src/main/res/layout/section_collection_list_card.xml
+++ b/project/src/main/res/layout/section_collection_list_card.xml
@@ -7,7 +7,8 @@
     android:layout_height="160dp"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="4dp"
-    app:cardPreventCornerOverlap="false">
+    app:cardPreventCornerOverlap="false"
+    app:cardUseCompatPadding="true">
 
     <com.expedia.bookings.widget.OptimizedImageView
         android:id="@+id/background_image"
