--- a/project/src/main/res/layout/section_phone_launch_double_row_lob.xml
+++ b/project/src/main/res/layout/section_phone_launch_double_row_lob.xml
@@ -7,7 +7,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="8dp"
+        android:layout_height="@dimen/launch_tile_margin_top"
         android:background="@color/launch_lob_bg" />
 
     <FrameLayout
@@ -21,7 +21,6 @@
             android:layout_height="@dimen/launch_lob_double_row_height"
             android:background="@color/launch_lob_bg" />
 
-
         <LinearLayout
 
             android:layout_width="match_parent"
@@ -30,15 +29,14 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:showDividers="middle">
-
             <com.expedia.bookings.widget.PhoneLaunchDoubleRowButton
                 android:id="@+id/hotels_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/launch_lob_margin"
-                android:layout_marginRight="@dimen/launch_lob_margin"
+                android:layout_marginLeft="@dimen/launch_tile_margin_side"
+                android:layout_marginRight="@dimen/launch_tile_margin_middle"
                 android:layout_weight="1"
-                app:btn_bg="@drawable/bg_lob_hotels"
+                app:btn_bg="@color/hotel_lob_btn"
                 app:btn_icon="@drawable/ic_launch_hotels"
                 app:btn_text="@string/nav_hotels"
                 app:icon_min_scale=".70" />
@@ -47,19 +45,20 @@
                 android:id="@+id/flights_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/launch_lob_margin"
+                android:layout_marginRight="@dimen/launch_tile_margin_side"
                 android:layout_weight="1"
-                app:btn_bg="@drawable/bg_lob_flights"
+                app:btn_bg="@color/flights_lob_btn"
                 app:btn_icon="@drawable/ic_launch_flights"
                 app:btn_text="@string/nav_flights"
                 app:icon_min_scale=".68" />
+
         </LinearLayout>
     </FrameLayout>
 
     <View
         android:id="@+id/vertical_divider"
         android:layout_width="match_parent"
-        android:layout_height="8dp"
+        android:layout_height="@dimen/launch_tile_margin_bottom"
         android:background="@color/launch_lob_bg" />
 
     <FrameLayout
@@ -86,10 +85,10 @@
                 android:id="@+id/cars_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/launch_lob_margin"
-                android:layout_marginRight="@dimen/launch_lob_margin"
+                android:layout_marginLeft="@dimen/launch_tile_margin_side"
+                android:layout_marginRight="@dimen/launch_tile_margin_middle"
                 android:layout_weight="1"
-                app:btn_bg="@drawable/bg_lob_cars"
+                app:btn_bg="@color/cars_lob_btn"
                 app:btn_icon="@drawable/ic_launch_cars"
                 app:btn_text="@string/nav_cars"
                 app:icon_min_scale=".75" />
@@ -98,9 +97,9 @@
                 android:id="@+id/activities_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/launch_lob_margin"
+                android:layout_marginRight="@dimen/launch_tile_margin_side"
                 android:layout_weight="1"
-                app:btn_bg="@drawable/bg_lob_activities"
+                app:btn_bg="@color/lx_lob_btn"
                 app:btn_icon="@drawable/ic_launch_activities"
                 app:btn_text="@string/nav_lx"
                 app:icon_min_scale=".75" />
