--- a/project/src/main/res/layout/section_phone_launch_lob.xml
+++ b/project/src/main/res/layout/section_phone_launch_lob.xml
@@ -7,7 +7,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="8dp"
+        android:layout_height="@dimen/launch_tile_margin_top"
         android:background="@color/launch_lob_bg" />
 
     <FrameLayout
@@ -25,8 +25,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
-
             android:gravity="center_horizontal"
             android:orientation="horizontal"
             android:showDividers="middle">
@@ -36,9 +34,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginLeft="@dimen/launch_lob_margin"
-                android:layout_marginRight="@dimen/launch_lob_margin"
-                app:btn_bg="@drawable/bg_lob_hotels"
+                android:layout_marginLeft="@dimen/launch_tile_margin_side"
+                android:layout_marginRight="@dimen/launch_tile_margin_middle"
+                app:btn_bg="@color/hotel_lob_btn"
                 app:btn_icon="@drawable/lob_hotel"
                 app:btn_text="@string/nav_hotels" />
 
@@ -47,8 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginRight="@dimen/launch_lob_margin"
-                app:btn_bg="@drawable/bg_lob_flights"
+                app:btn_bg="@color/flights_lob_btn"
                 app:btn_icon="@drawable/lob_flight"
                 app:btn_text="@string/nav_flights" />
 
@@ -57,8 +54,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginRight="@dimen/launch_lob_margin"
-                app:btn_bg="@drawable/bg_lob_cars"
+                app:btn_bg="@color/cars_lob_btn"
                 app:btn_icon="@drawable/lob_car"
                 app:btn_text="@string/nav_cars" />
 
@@ -67,8 +63,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginRight="@dimen/launch_lob_margin"
-                app:btn_bg="@drawable/bg_lob_activities"
+                app:btn_bg="@color/lx_lob_btn"
                 app:btn_icon="@drawable/lob_activities"
                 app:btn_text="@string/nav_lx" />
         </LinearLayout>
