--- a/project/src/main/res/layout/widget_phone_launch_btn.xml
+++ b/project/src/main/res/layout/widget_phone_launch_btn.xml
@@ -3,11 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal">
 
-    <FrameLayout
+    <android.support.v7.widget.CardView
         android:id="@+id/lob_btn_bg"
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_lob_height"
-        android:foreground="?android:attr/selectableItemBackground" />
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="@dimen/launch_lob_btn_corner_radius"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="false" />
 
     <ImageView
         android:id="@+id/icon"
