--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -23,7 +23,12 @@
     <color name="launch_discount">#03C690</color>
     <color name="launch_air_attach">#F27D0F</color>
     <color name="launch_tonight_only">#204A8E</color>
-    <color name="hotel_lob_btn">#028F87</color>
+    <color name="hotel_lob_btn">@color/hotels_primary_color</color>
+    <color name="cars_lob_btn">@color/cars_primary_color</color>
+    <color name="lx_lob_btn">@color/lx_primary_color</color>
+    <color name="flights_lob_btn">#1580AC</color>
+    <color name="disabled_lob_btn">#909ba3</color>
+
     <color name="launch_list_bg">#ECEFF1</color>
     <color name="launch_lob_bg">#FFFFFF</color>
     <color name="launch_list_txt">#FFFFFF</color>
@@ -225,11 +230,11 @@
     <color name="placeholder_background_color">#21394E</color>
 
     <!-- Cars colors -->
-    <color name="hotels_primary_color">#117E74</color>
+    <color name="hotels_primary_color">#009688</color>
 
     <color name="cars_status_bar_color">#7E4569</color>
     <color name="cars_checkout_text_color">#676767</color>
-    <color name="cars_primary_color">#99557F</color>
+    <color name="cars_primary_color">#A25283</color>
     <color name="cars_secondary_color">#915B7C</color>
     <color name="cars_tooltip_color">#915B7C</color>
     <color name="cars_tooltip_disabled_color">#9D9D9D</color>
@@ -253,7 +258,7 @@
     <color name="checkout_card_brand_color">#38597D</color>
 
     <!-- LX colors -->
-    <color name="lx_primary_color">#DB6F0D</color>
+    <color name="lx_primary_color">#E88534</color>
     <color name="lx_valid_days_calendar">#3A3A3A</color>
     <color name="lx_invalid_days_calendar">#A9A9A9</color>
     <color name="lx_search_result_info_text_color">#888888</color>
