--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -31,10 +31,14 @@
     <dimen name="launch_lob_height">103dp</dimen>
     <dimen name="launch_lob_container_height">140dp</dimen>
     <dimen name="launch_lob_squashed_height">80dp</dimen>
-    <dimen name="launch_lob_double_row_height">76dp</dimen>
+    <dimen name="launch_lob_double_row_height">81dp</dimen>
     <dimen name="launch_lob_double_row_container_height">197dp</dimen>
     <dimen name="launch_lob_double_row_squashed_height">112dp</dimen>
-    <dimen name="launch_lob_margin">8dp</dimen>
+    <dimen name="launch_lob_btn_corner_radius">3dp</dimen>
+    <dimen name="launch_tile_margin_top">8dp</dimen>
+    <dimen name="launch_tile_margin_bottom">2dp</dimen>
+    <dimen name="launch_tile_margin_side">10dp</dimen>
+    <dimen name="launch_tile_margin_middle">4dp</dimen>
     <dimen name="launch_list_corner_radius">2dp</dimen>
 
     <!-- Itinerary dimens -->
