--- a/project/src/samsung/res/values/styles.xml
+++ b/project/src/samsung/res/values/styles.xml
@@ -3,14 +3,25 @@
 
     <style name="CollectionLOBButton" >
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@drawable/bg_collection_details_btn</item>
+        <item name="android:layout_height">70dp</item>
         <item name="android:drawablePadding">16dp</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/itin_white_text</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:layout_marginBottom">32dp</item>
+        <item name="android:layout_marginBottom">25dp</item>
+    </style>
+
+    <style name="HotelCollectionLOBButton" parent="CollectionLOBButton">
+        <item name="android:background">@drawable/bg_collection_hotel_btn</item>
+    </style>
+
+    <style name="FlightCollectionLOBButton" parent="CollectionLOBButton">
+        <item name="android:background">@drawable/bg_collection_flight_btn</item>
+    </style>
+
+    <style name="LXCollectionLOBButton" parent="CollectionLOBButton">
+        <item name="android:background">@drawable/bg_collection_lx_btn</item>
     </style>
 
 </resources>
