s/4739 Material hotel details
Expand rooms and rates container row.

--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -299,5 +299,7 @@
     <!-- Dimensions For LX Toolbar dropshadow height -->
     <dimen name="toolbar_dropshadow_height">5dp</dimen>
 
+    <!--Dimesnion for room rate margin -->
+    <dimen name="hotel_room_list_container_margin">9dp</dimen>
 
 </resources>
