--- a/project/src/main/res/layout/widget_hotel_detail.xml
+++ b/project/src/main/res/layout/widget_hotel_detail.xml
@@ -16,9 +16,9 @@
         android:layout_height="fill_parent">
 
         <RelativeLayout
+            android:id="@+id/main_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/itin_white_text">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/price_widget"
