--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -204,6 +204,15 @@
         <item name="android:background">?attr/skin_carsToggleBackgroundSelectorDrawable</item>
     </style>
 
+    <style name="HotelToggleButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textOff">"View Room"</item>
+        <item name="android:textOn">"Book"</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:background">@drawable/hotel_toggle_background_selector</item>
+    </style>
+
     <style name="CarOfferText">
         <item name="android:textColor">@color/cars_checkout_text_color</item>
         <item name="android:textSize">11sp</item>
