--- a/project/src/samsung/res/layout/intro_pager_item.xml
+++ b/project/src/samsung/res/layout/intro_pager_item.xml
@@ -7,21 +7,17 @@
     <ImageView
         android:id="@+id/item_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ImageView
-        android:id="@+id/item_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:paddingTop="30dp"
-        android:src="@drawable/expedia_login" />
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/pager_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:paddingTop="80dp"
-        android:textColor="@android:color/white" />
+        android:paddingTop="140dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:textColor="@android:color/white"
+        android:gravity="center" />
 </FrameLayout>
