Upgrade AccountLib to 0.5.3
Also adds the attrs for the Expedia logo margins to the theme.

--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -334,6 +334,8 @@
         <item name="acct__input_text_default_color">@color/acct__bg_input_text_default</item>
         <item name="acct__toolbar_icon_color">@color/toolbar_icon</item>
         <item name="acct__user_info_text_color">@color/acct__user_info_text_color</item>
+        <item name="acct__logo_text_drawable_margin_left">6dp</item>
+        <item name="acct__logo_text_drawable_margin_top">5dp</item>
     </style>
 
     <style name="LaunchOverflowStyle" parent="Widget.AppCompat.ActionButton.Overflow">
