TVLY: Skinning account creation.

--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -329,5 +329,6 @@
     <attr name="skin_lxTicketMinusButtonSelectorDrawable" format="reference" />
     <attr name="skin_lxErrorDefaultDrawable" format="reference" />
     <attr name="skin_filterNumberBgDrawable" format="reference" />
+    <attr name="skin_accountCreationBackgroundDrawable" format="reference" />
 
 </resources>
