--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -298,28 +298,42 @@
         <item name="skin_launchActionBarBackgroundColor">@color/cars_launch_actionbar_color</item>
     </style>
 
-    <style name="AccountLibTheme" parent="Theme.AppCompat">
+    <!--
+        Override this theme in whitelabels to provide whitelabel specific theme values.
+
+        Note: If any attr which is in AccountLibTheme and need to be customized per whitelabel,
+        that attr should be removed from AccountLibTheme and
+        must be added in all Whitelabel.AccountLibTheme for all whitelabels
+    -->
+    <style name="Whitelabel.AccountLibTheme" parent="Theme.AppCompat">
+        <item name="acct__input_text_error_color">@color/acct__bg_input_text_error</item>
+        <item name="acct__input_text_good_color">@color/acct__bg_input_text_good</item>
+        <item name="acct__sign_in_button_background_drawable">@drawable/acct__bg_btn_sign_in</item>
+        <item name="acct__sign_in_button_text_color">@color/acct__btn_sign_in_text</item>
+        <item name="acct__logo_small_drawable">@drawable/acct__logo_small</item>
+        <item name="acct__logo_large_drawable">@drawable/acct__logo_large</item>
+        <item name="acct__logo_text_drawable">@drawable/acct__logo_text</item>
+        <item name="acct__checkmark_good_drawable">@drawable/acct__ic_checkmark</item>
+        <item name="acct__checkmark_warning_drawable">@drawable/acct__ic_warning</item>
+        <item name="skin_accountCreationBackgroundDrawable">@drawable/bg_mtfuji_crop</item>
+        <item name="acct__create_account_prompt_string">@string/acct_Create_an_Expedia_account</item>
+        <item name="acct__welcome_message_string">@string/acct_Welcome_to_Expedia</item>
+        <item name="acct__account_already_exists_string">@string/acct_Expedia_account_already_exists</item>
+    </style>
+
+    <!--
+        Base app theme for AccountLib, all the properties which are common for all whitelabels should be added here
+    -->
+    <style name="AccountLibTheme" parent="Whitelabel.AccountLibTheme">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="acct__flavor_text_color">@color/acct__flavor_text</item>
-        <item name="acct__input_text_error_color">@color/acct__bg_input_text_error</item>
-        <item name="acct__input_text_good_color">@color/acct__bg_input_text_good</item>
         <item name="acct__input_text_default_color">@color/acct__bg_input_text_default</item>
-        <item name="acct__sign_in_button_background_drawable">@drawable/acct__bg_btn_sign_in</item>
-        <item name="acct__sign_in_button_text_color">@color/acct__btn_sign_in_text</item>
         <item name="acct__toolbar_icon_color">@color/toolbar_icon</item>
         <item name="acct__user_info_text_color">@color/acct__user_info_text_color</item>
-        <item name="acct__create_account_prompt_string">@string/acct_Create_an_Expedia_account</item>
-        <item name="acct__welcome_message_string">@string/acct_Welcome_to_Expedia</item>
-        <item name="acct__account_already_exists_string">@string/acct_Expedia_account_already_exists</item>
-        <item name="acct__logo_small_drawable">@drawable/acct__logo_small</item>
-        <item name="acct__logo_large_drawable">@drawable/acct__logo_large</item>
-        <item name="acct__logo_text_drawable">@drawable/acct__logo_text</item>
-        <item name="acct__checkmark_good_drawable">@drawable/acct__ic_checkmark</item>
-        <item name="acct__checkmark_warning_drawable">@drawable/acct__ic_warning</item>
     </style>
 
     <style name="LaunchOverflowStyle" parent="Widget.AppCompat.ActionButton.Overflow">
