--- a/project/src/travelocity/res/values/colors.xml
+++ b/project/src/travelocity/res/values/colors.xml
@@ -38,4 +38,8 @@
     <color name="lx_secondary_color_disabled_tvly">#032E4D</color>
     <color name="lx_unchecked_toggle_text_color_tvly">@android:color/white</color>
 
+    <!--Account Lib Colors -->
+    <color name="acct__btn_sign_in_text_tvly">#FFFFFF</color>
+    <color name="acct__bg_input_text_error_tvly">#FFFFFF</color>
+    <color name="acct__bg_input_text_good_tvly">#EEEEEE</color>
 </resources>
