--- a/project/src/travelocity/res/values/themes.xml
+++ b/project/src/travelocity/res/values/themes.xml
@@ -186,4 +186,21 @@
         <item name="android:listSeparatorTextViewStyle">@style/TabletPreferenceSeparator</item>
     </style>
 
+    <style name="Whitelabel.AccountLibTheme" parent="Theme.AppCompat">
+        <item name="acct__input_text_error_color">@color/acct__bg_input_text_error_tvly</item>
+        <item name="acct__input_text_good_color">@color/acct__bg_input_text_good_tvly</item>
+        <item name="acct__sign_in_button_background_drawable">@drawable/btn_signin_travelocity</item>
+        <item name="acct__sign_in_button_text_color">@color/acct__btn_sign_in_text_tvly</item>
+        <item name="acct__logo_small_drawable">@drawable/acct__logo_small_tvly</item>
+        <item name="acct__logo_large_drawable">@drawable/acct__logo_large_tvly</item>
+        <item name="acct__logo_text_drawable">@drawable/acct__logo_text_tvly</item>
+        <item name="acct__checkmark_good_drawable">@drawable/acct__ic_checkmark_tvly</item>
+        <item name="acct__checkmark_warning_drawable">@drawable/acct__ic_warning_tvly</item>
+        <item name="skin_accountCreationBackgroundDrawable">@drawable/bg_mtfuji_crop_tvly</item>
+        <item name="acct__create_account_prompt_string">@string/acct_Create_a_Travelocity_account</item>
+        <item name="acct__welcome_message_string">@string/acct_Welcome_to_Travelocity</item>
+        <item name="acct__account_already_exists_string">@string/acct_Travelocity_account_already_exists</item>
+        <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
+    </style>
+
 </resources>
