--- a/project/src/samsung/res/layout/widget_collection_launch.xml
+++ b/project/src/samsung/res/layout/widget_collection_launch.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_launch_samsung"
+    android:clickable="true"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingLeft="32dp"
