--- a/project/src/main/res/layout/actionbar_tab_bg.xml
+++ b/project/src/main/res/layout/actionbar_tab_bg.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="?android:attr/actionBarSize"
+    android:layout_height="?attr/actionBarSize"
     android:layout_gravity="center_horizontal"
     android:background="?android:selectableItemBackground"
     android:paddingLeft="18dp"
