--- a/project/src/main/res/layout/activity_phone_launch.xml
+++ b/project/src/main/res/layout/activity_phone_launch.xml
@@ -15,7 +15,7 @@
         android:id="@+id/launch_toolbar"
         style="@style/LaunchActionBar"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
+        android:layout_height="?attr/actionBarSize"
         android:background="?attr/skin_launchActionBarBackgroundColor"
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp" />
