--- a/project/src/main/res/layout/widget_phone_launch.xml
+++ b/project/src/main/res/layout/widget_phone_launch.xml
@@ -23,14 +23,14 @@
         android:id="@+id/lob_selector"
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_lob_container_height"
-        android:layout_marginTop="?android:actionBarSize"
+        android:layout_marginTop="?attr/actionBarSize"
         android:visibility="gone" />
 
     <com.expedia.bookings.widget.LaunchLobDoubleRowWidget
         android:id="@+id/double_row_lob_selector"
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_lob_double_row_container_height"
-        android:layout_marginTop="?android:actionBarSize" />
+        android:layout_marginTop="?attr/actionBarSize" />
 
     <include
         android:id="@+id/air_attach_banner"
