--- a/project/src/travelocity/res/values/themes.xml
+++ b/project/src/travelocity/res/values/themes.xml
@@ -201,6 +201,8 @@
         <item name="acct__welcome_message_string">@string/acct_Welcome_to_Travelocity</item>
         <item name="acct__account_already_exists_string">@string/acct_Travelocity_account_already_exists</item>
         <item name="android:checkboxStyle">@style/Widget.CompoundButton.CheckBox</item>
+        <item name="acct__logo_text_drawable_margin_left">0dp</item>
+        <item name="acct__logo_text_drawable_margin_top">20dp</item>
     </style>
 
 </resources>
