--- a/project/src/main/res/layout/account_lib_activity.xml
+++ b/project/src/main/res/layout/account_lib_activity.xml
@@ -13,7 +13,8 @@
     <com.expedia.account.AccountView
         android:id="@+id/account_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true" />
 
     <LinearLayout
         android:layout_width="wrap_content"
