--- a/project/src/main/res/layout/widget_car_date_time.xml
+++ b/project/src/main/res/layout/widget_car_date_time.xml
@@ -51,7 +51,6 @@
             android:layout_toLeftOf="@+id/pickup_time_seek_bar"
             android:gravity="center_vertical"
             android:paddingLeft="16dp"
-            android:paddingRight="4dp"
             android:text="@string/pick_up_time_label"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
@@ -76,7 +75,7 @@
             android:layout_alignTop="@+id/dropoff_time_seek_bar"
             android:gravity="center_vertical"
             android:paddingLeft="16dp"
-            android:paddingRight="4dp"
+            android:layout_marginRight="5dp"
             android:text="@string/drop_off_time_label"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
