--- a/project/src/samsung/res/values/styles.xml
+++ b/project/src/samsung/res/values/styles.xml
@@ -33,5 +33,8 @@
         <item name="android:progressDrawable">@drawable/ratingbar_userreview_blue</item>
     </style>
 
+    <style name="Widget.ListView.DropDown.Samsung" parent="@android:style/Widget.Holo.Light.ListView.DropDown">
+        <item name="android:background">@drawable/bg_action_bar_samsung</item>
+    </style>
 
 </resources>
