--- a/project/src/main/res/layout/fragment_booking_overview.xml
+++ b/project/src/main/res/layout/fragment_booking_overview.xml
@@ -48,11 +48,12 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-                            android:orientation="vertical"
                             android:layout_marginBottom="16dp"
                             android:layout_marginLeft="1.5dp"
                             android:layout_marginRight="1.5dp"
-                            android:layout_marginTop="4dp" />
+                            android:layout_marginTop="4dp"
+                            android:orientation="vertical"
+                            android:paddingTop="@dimen/account_button_margin_top" />
 
                         <include
                             android:id="@+id/wallet_button_layout"
